# aas_middleware

./: .gitignore  404.html  AssetInterfaceMappingConfigurationAAS_schema.json  AssetInterfaceMappingConfigurationAAS_schema.py  AssetInterfaceMappingConfigurationAAS_schema_recreated.json  AssetInterfaceMappingConfigurationAAS_schema_recreated.py  LICENSE  ProvisionofSimulationModelsAAS_schema.json  ProvisionofSimulationModelsAAS_schema.py  ProvisionofSimulationModelsAAS_schema_recreated.json  ProvisionofSimulationModelsAAS_schema_recreated.py  README.md  RecreatedSchema.json  Use_cases_aas_transformation.md  brainstorming_connections_middleware.md  check_running_middleware.py  checking_reference_and_identifier_list.py  datetime_datamodel_check.py  example_middleware.py  example_model_rebuild_and_graph.py  example_ua_server.py  idta_asset_interfaces_mapping_submodel_template.json  idta_asset_interfaces_mapping_submodel_template_recreated.json  idta_asset_interfaces_mapping_submodel_template_schema.json  idta_asset_interfaces_mapping_submodel_template_schemal.py  idta_provisioning_of_simulation_models.json  idta_provisioning_of_simulation_models_recreated.json  index.html  json_schema_mapper.py  json_schema_mapper2.py  middleware_mqtt_connector_example.py  middleware_mqtt_test.py  mkdocs.yml  model.py  objects.inv  pydantic_defaults_check.py  pydantic_defaults_test.py  pydantic_union_type.py  pyproject.toml  rebuild_example_pydantic.py  (+6 more)
API_reference/API_reference_0_overview/: index.html
API_reference/API_reference_1_model/: index.html
API_reference/API_reference_2_middleware/: index.html
API_reference/API_reference_3_connect/: index.html
Guides/Tutorials_1_data_modelling/: index.html
Guides/Tutorials_2_middleware_apis/: index.html
Guides/Tutorials_3_connections_and_workflows/: index.html
Guides/Tutorials_4_data_integration/: index.html
Guides/Tutorials_5_deployment/: index.html
aas_middleware/: __init__.py  core.py
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  docker_app.py
docs/: index.md  prodsys_example.md
examples/: connections_example.py  example_connectors_and_workflows.py  example_file_and_blobs.py  example_middleware.py  example_sdm_model_check_and_visualization.py  example_template_import.py  file_and_blob_example.py  minimal_example.py  optional_example.py  test_workflow.py
prodsys_example/: index.html
search/: search_index.json
site/: index.html  objects.inv
stylesheets/: extra.css
test/: conftest.py
tests/: conftest.py
(+148 files in other folders)
