[tool.poetry]
name = "aas-middleware"
version = "0.1.0"
description = ""
authors = ["Sebastian Behrendt <sebastianbehrendt97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
basyx-python-sdk = "^1.0.0"
graphene-pydantic = "^0.6.1"
anyio = "^4.3.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
pytest-order = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
